--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,21 @@ body {
 }
 
 .container {
-    height: 95vh;
+    height: 90vh;
     max-width: 900px;
     margin: 0 auto;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 6px 18px rgba(20, 30, 50, 0.08);
     overflow: hidden;
+    padding-bottom: inherit;
+}
+
+.chat-footer {
+    width: 100%;
+    height: 2vh;
+    margin-top: 1vh;
+    font-weight: 500;
 }
 
 header {
@@ -31,7 +39,7 @@ header h1 {
 }
 
 main {
-    height: 86vh;
+    height: 80vh;
     display: flex;
     gap: 20px;
     padding: 18px;
@@ -127,6 +135,7 @@ article {
     border-radius: 12px;
     background: #eef2ff;
     border: 1px solid #e1e8ff;
+    word-break: break-all;
 }
 
 .chat-input {
@@ -145,9 +154,16 @@ article {
     margin-top: 8px;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
+
 .right {
     float: right;
-    text-align: right;
 }
 
 @media (max-width:740px) {
